# Stocks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/processed/: NEXT50.csv  NIFTY500.csv  NIFTYIT.csv  SMALLCAP250.csv
notebooks/: 00_exploration.ipynb  01_data_cleaning.ipynb  refactor.ipynb
src/: config.py
src/scripts/: fetch_tri_history.py  index_proxy.py
src/utils/: __init__.py  api_io.py  data_io_clean.py  dataset_builder.py  features.py  portfolio.py  prepocessing.py  preprocessing.py  universe.py
