[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-optimization"
version = "0.1.0"
description = "Data pipeline for personal portfolio analysis"
requires-python = ">=3.11"

dependencies = [
    "cvxpy>=1.8.1",
    "ipython>=8.12.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "yfinance>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pre-commit",
    "jupyter"
]
[tool.setuptools.packages.find]
where = ["src"] 